front実際の挙動確認用

--- a/front end/JSstudy.html
+++ b/front end/JSstudy.html
@@ -61,7 +61,7 @@
     <input type="file" onChange="readFile(this.files);">
     <div id="output3"></div>
     <script>
-	    const output = document.getElementById("output");
+	    const output = document.getElementById("output3");
 	    function readFile(files) {
 		    if (files.length === 0) return;
 		    const file = files[0];
