--- a/Result/pet.html
+++ b/Result/pet.html
@@ -38,7 +38,7 @@
     ここにペットの写真が表示されます
 </canvas>
 
-<script src="main.js"></script><!--ここはテスト用、本来はImageImport.jsって書く-->
+<script src="ImageImport.js"></script><!--ここはテスト用、本来はImageImport.jsって書く-->
 <div class="EffectButton">
 <button class="effect-button" type="button" name = "glasses" onclick = "EffectSelect(this.name)">サングラス</button>
 <button class="effect-button" type="button" name = "hat" onclick = "EffectSelect(this.name)">帽子</button>
