ボタンかわいくするためにサンプル使ってやってみてる

--- a/Result/pet.html
+++ b/Result/pet.html
@@ -42,7 +42,9 @@
 <div class="EffectButton">
 <button class="effect-button" type="button" name = "glasses" onclick = "EffectSelect(this.name)">サングラス</button>
 <button class="effect-button" type="button" name = "hat" onclick = "EffectSelect(this.name)">帽子</button>
-<button class="effect-button" type="button" name = "ribbon" onclick = "EffectSelect(this.name)">リボン</button>
+<button class="effect-button" type="button" name = "ribbon" onclick = "EffectSelect(this.name)">
+    <img src="Result\ribbon.png" alt="Ribbon Image" style="height: 100%;">
+</button>
 <button class="effect-button" type="button" name = "hart" onclick = "EffectSelect(this.name)">はーと</button>
 <button class="effect-button" type="button" name = "gantai" onclick = "EffectSelect(this.name)">眼帯</button>
 <button class="effect-button" type="button" name = "oukan" onclick = "EffectSelect(this.name)">王冠</button>
