--- a/Result/pet.html
+++ b/Result/pet.html
@@ -55,7 +55,7 @@
     ここにペットの写真が表示されます
 </canvas>
 <!---->
-<script src="ImageImport.js"></script><!--ここはテスト用、本来はImageImport.jsって書く-->
+<script src="ImageImport.js"></script><!--ここはテスト用本来はImageImport.jsって書く-->
 <!--勝手に足しました:みうら-->
 <script src="EffectSelect.js"></script>
 <script src="ImageDownload.js"></script>
