フォルダ整理もしてみたやつ。

--- a/pet_app/backend/www/pet.html
+++ b/pet_app/backend/www/pet.html
@@ -103,36 +103,38 @@
 </div>
 </div>
 
-<!---->
 <script src="ImageImport.js"></script><!--ここはテスト用本来はImageImport.jsって書く-->
 <!--勝手に足しました:みうら-->
 <script src="EffectSelect.js"></script>
+<script src="EffectRemove.js"></script>
 <script src="ImageDownload.js"></script>
+<script src="OtherProcess.js"></script>
+<!---->
 
 <div class="EffectButton">
 <button class="effect-button" type="button" name = "sangurasu" onclick = "EffectSelect(this.name)">
-    <img src="glass.png" alt="glass Image" style="height: 100%;">
+    <img src="button/glass.png" alt="glass Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "bousi" onclick = "EffectSelect(this.name)">
-    <img src="hat.png" alt="hat Image" style="height: 100%;">
+    <img src="button/hat.png" alt="hat Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "ribbon" onclick = "EffectSelect(this.name)">
-    <img src="ribbon.png" alt="Ribbon Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "chouchou" onclick = "EffectSelect(this.name)">
+    <img src="button/ribbon.png" alt="Ribbon Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "hart" onclick = "EffectSelect(this.name)">
-    <img src="hart.png" alt="hart Image" style="height: 100%;">
+    <img src="button/hart.png" alt="hart Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "gantai" onclick = "EffectSelect(this.name)">
-    <img src="gantai.png" alt="gantai Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "dokuro" onclick = "EffectSelect(this.name)">
+    <img src="button/gantai.png" alt="gantai Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "oukan" onclick = "EffectSelect(this.name)">
-    <img src="oukan.png" alt="oukan Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "kanmuri" onclick = "EffectSelect(this.name)">
+    <img src="button/oukan.png" alt="oukan Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "rabbit" onclick = "EffectSelect(this.name)">
-    <img src="rabbit.png" alt="rabbit Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "mimi" onclick = "EffectSelect(this.name)">
+    <img src="button/rabbit.png" alt="rabbit Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "star" onclick = "EffectSelect(this.name)">
-    <img src="star.png" alt="star Image" style="height: 100%;">
+    <img src="button/star.png" alt="star Image" style="height: 100%;">
 </button>
 </div>
 </div>
