--- a/pet_app/backend/www/pet.html
+++ b/pet_app/backend/www/pet.html
@@ -19,7 +19,6 @@
     align-items: center;
 }
 
-
     .canvas-and-button{
         display:flex;
         align-items: flex-start;
@@ -106,11 +105,12 @@
 <!---->
 <script src="ImageImport.js"></script><!--ここはテスト用本来はImageImport.jsって書く-->
 <!--勝手に足しました:みうら-->
+<script src="count.js"></script>
 <script src="EffectSelect.js"></script>
 <script src="ImageDownload.js"></script>
 
 <div class="EffectButton">
-<button class="effect-button" type="button" name = "sangurasu" onclick = "EffectSelect(this.name)">
+<button class="effect-button" type="button" name = "sangurasu" onclick = "count(this.name)">
     <img src="glass.png" alt="glass Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "bousi" onclick = "EffectSelect(this.name)">
@@ -122,13 +122,13 @@
 <button class="effect-button" type="button" name = "hart" onclick = "EffectSelect(this.name)">
     <img src="hart.png" alt="hart Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "gantai" onclick = "EffectSelect(this.name)">
+<button class="effect-button" type="button" name = "dokuro" onclick = "EffectSelect(this.name)">
     <img src="gantai.png" alt="gantai Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "oukan" onclick = "EffectSelect(this.name)">
+<button class="effect-button" type="button" name = "kanmuri" onclick = "EffectSelect(this.name)">
     <img src="oukan.png" alt="oukan Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "rabbit" onclick = "EffectSelect(this.name)">
+<button class="effect-button" type="button" name = "mimi" onclick = "EffectSelect(this.name)">
     <img src="rabbit.png" alt="rabbit Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "star" onclick = "EffectSelect(this.name)">
