--- a/pet_app/backend/www/pet.html
+++ b/pet_app/backend/www/pet.html
@@ -100,6 +100,11 @@
 </canvas>
 <div class="downloadbutton">
 <button class="download" type="button" onclick="ImageDownload()">保存</button>
+
+<!--勝手に足しました:みうら-->
+<button type="button" onclick = "ChangeUseImage()"></button>
+<!---->
+
 </div>
 </div>
 <script src="ImageImport.js"></script>
