--- a/pet_app/backend/www/pet.html
+++ b/pet_app/backend/www/pet.html
@@ -109,29 +109,29 @@
 <!---->
 
 <div class="EffectButton">
-<button class="effect-button" type="button" name = "sangurasu" effectName="sangurasu" onclick="handleClick('sangurasu')">
+<button class="effect-button" type="button" name = "effectsangurasu" effectName="effectsangurasu" onclick="handleClick('effctsangurasu')">
     <img src="button/glass.png" alt="glass Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "bousi" effectName="bousi" onclick="handleClick('bousi')">
     <img src="button/hat.png" alt="hat Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "chouchou" effectName="chouchou" onclick="handleClick('chouchou')">
+<button class="effect-button" type="button" name = "effectribon" effectName="effectribon" onclick="handleClick('effectribon')">
     <img src="button/ribbon.png" alt="Ribbon Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "hart" effectName="hart" onclick="handleClick('hart')">
-    <img src="button/hart.png" alt="hart Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "effecteye" effectName="effecteye" onclick="handleClick('effecteye')">
+    <img src="button/eyebotan.png" alt="eye Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "dokuro" effectName="dokuro" onclick="handleClick('dokuro')">
-    <img src="button/gantai.png" alt="gantai Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "effecthana" effectName="effecthana" onclick="handleClick('effecthana')">
+    <img src="button/nosebotan.png" alt="nose Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "kanmuri" effectName="kanmuri" onclick="handleClick('kanmuri')">
-    <img src="button/oukan.png" alt="oukan Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "effecthone" effectName="effecthone" onclick="handleClick('effecthone')">
+    <img src="button/mousebotan.png" alt="mouse Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "mimi" effectName="mimi" onclick="handleClick('mimi')">
     <img src="button/rabbit.png" alt="rabbit Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "star" effectName="star" onclick="handleClick('star')">
-    <img src="button/star.png" alt="star Image" style="height: 100%;">
+<button class="effect-button" type="button" name = "kiraeffect" effectName="kiraeffect" onclick="handleClick('kiraeffect')">
+    <img src="button/kirakirabotan.png" alt="kirakira Image" style="height: 100%;">
 </button>
 </div>
 </div>
