--- a/pet_app/backend/www/pet.html
+++ b/pet_app/backend/www/pet.html
@@ -114,7 +114,7 @@
 <!---->
 
 <div class="EffectButton">
-<button class="effect-button" type="button" name = "effectsangurasu" effectName="effectsangurasu" onclick="handleClick('effctsangurasu')">
+<button class="effect-button" type="button" name = "effectsangurasu" effectName="effectsangurasu" onclick="handleClick('effectsangurasu')">
     <img src="button/glass.png" alt="glass Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "bousi" effectName="bousi" onclick="handleClick('bousi')">
