帽子effect名前がファイル名と違ったので一致させました

--- a/pet_app/backend/www/pet.html
+++ b/pet_app/backend/www/pet.html
@@ -117,7 +117,7 @@
 <button class="effect-button" type="button" name = "effectsangurasu" effectName="effectsangurasu" onclick="handleClick('effectsangurasu')">
     <img src="button/glass.png" alt="glass Image" style="height: 100%;">
 </button>
-<button class="effect-button" type="button" name = "bousi" effectName="bousi" onclick="handleClick('bousi')">
+<button class="effect-button" type="button" name = "boushi" effectName="boushi" onclick="handleClick('bousi')">
     <img src="button/hat.png" alt="hat Image" style="height: 100%;">
 </button>
 <button class="effect-button" type="button" name = "effectribon" effectName="effectribon" onclick="handleClick('effectribon')">
